--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,16 @@ twitter_username: ashleydavis75
 github_username:  ashleydavis
 
 # Build settings
+# https://www.taniarascia.com/make-a-static-website-with-jekyll/comment-page-1/
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+sass:
+  sass_dir: _sass
+include: ['_pages']
+kramdown:
+  input: GFM
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
