--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  ashleydavis
 # Build settings
 # https://www.taniarascia.com/make-a-static-website-with-jekyll/comment-page-1/
 markdown: kramdown
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-feed
 sass:
