Revert "Setup for github-pages."
This reverts commit ed141f549bba3d66ade57503fb0c832884b36677.

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  ashleydavis
 # Build settings
 # https://www.taniarascia.com/make-a-static-website-with-jekyll/comment-page-1/
 markdown: kramdown
-remote_theme: "mmistakes/minimal-mistakes"
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 sass:
