--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "/the-data-wrangler-blog" # the subpath of your site, e.g. /blog
 url: "https://ashleydavis.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ashleydavis75
 github_username:  ashleydavis
+logo: "content/images/2016/12/Code-Capers_logos_sienna_lge---Copy.png"
 
 # Build settings
 # https://www.taniarascia.com/make-a-static-website-with-jekyll/comment-page-1/
