Simplified nav links. Trying Exo font.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,14 @@
 - label: The Book
   url: http://bit.ly/2t2cJu2
 
-- label: JavaScript cheat sheet
+- label: JS cheat sheet
   url: /javascript-cheat-sheet
   slug: javascript-cheat-sheet
 
-- label: Data-Forge cheat sheet
+- label: DF cheat sheet
   url: /dataforge-cheat-sheet
   slug: dataforge-cheat-sheet
 
-- label: Getting Started with Vagrant 
+- label: Vagrant 
   url: /getting-started-with-vagrant
   slug: getting-started-with-vagrant
