New link to JS cheat sheet.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
   url: http://bit.ly/2t2cJu2
 
 - label: JS cheat sheet
-  url: /javascript-cheat-sheet
+  url: http://jscheatsheet.the-data-wrangler.com
   slug: javascript-cheat-sheet
 
 - label: DF cheat sheet
