--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,10 +8,12 @@
 
 - label: The Book
   url: http://bit.ly/2t2cJu2
+  new_tab: true
 
 - label: JS cheat sheet
   url: http://jscheatsheet.the-data-wrangler.com
   slug: javascript-cheat-sheet
+  new_tab: true
 
 - label: DF cheat sheet
   url: /dataforge-cheat-sheet
